--- a/template.html
+++ b/template.html
@@ -2,13 +2,34 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>📺 Jogos de Hoje - Canais de TV</title>
+  <title>⚽ Jogos de Hoje</title>
   <style>
-    body { background-color: #111; color: #fff; font-family: sans-serif; padding: 20px; }
-    h1 { text-align: center; color: #FFD700; }
-    .game { background: #222; margin: 10px 0; padding: 10px; border-radius: 8px; }
-    .info { font-weight: bold; }
-    .canal { color: #0f0; margin-top: 5px; }
+    body {
+      background-color: #111;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+      color: #FFD700;
+    }
+    .game {
+      background-color: #222;
+      border: 1px solid #333;
+      border-radius: 8px;
+      padding: 15px;
+      margin: 10px 0;
+    }
+    .info {
+      font-size: 18px;
+      font-weight: bold;
+    }
+    .canal {
+      color: #0f0;
+      margin-top: 5px;
+    }
   </style>
 </head>
 <body>
