--- a/template.html
+++ b/template.html
@@ -33,7 +33,7 @@
   </style>
 </head>
 <body>
-  <h1>📺 Jogos de Hoje - Atualizado diariamente</h1>
+  <h1>📺 Jogos de Hoje - Atualizado diariamente IMPERIAL</h1>
   {{JOGOS_AQUI}}
 </body>
 </html>
