--- a/template.html
+++ b/template.html
@@ -2,38 +2,69 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>⚽ Jogos de Hoje</title>
+  <title>Jogos na TV Hoje</title>
   <style>
+    * { box-sizing: border-box; margin: 0; padding: 0 }
     body {
-      background-color: #111;
-      color: #fff;
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
+      color: #fff;
+      background-image: url('https://i.imgur.com/HEz0Bvt.jpg'); /* imagem de fundo */
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
     }
+
+    .overlay {
+      background-color: rgba(0, 0, 0, 0.75);
+      padding: 40px 20px;
+      min-height: 100vh;
+    }
+
+    .container {
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+
     h1 {
       text-align: center;
       color: #FFD700;
+      font-size: 36px;
+      margin-bottom: 40px;
+      text-shadow: 2px 2px 4px #000;
     }
+
     .game {
-      background-color: #222;
-      border: 1px solid #333;
+      background-color: rgba(20, 20, 20, 0.85);
+      border-left: 5px solid #FFD700;
+      padding: 15px 20px;
+      margin-bottom: 16px;
       border-radius: 8px;
-      padding: 15px;
-      margin: 10px 0;
+      box-shadow: 0 0 8px rgba(0,0,0,0.4);
     }
+
     .info {
       font-size: 18px;
-      font-weight: bold;
+      margin-bottom: 6px;
     }
+
     .canal {
-      color: #0f0;
-      margin-top: 5px;
+      color: #7CFC00;
+      font-weight: bold;
+      font-size: 15px;
+    }
+
+    @media(max-width:600px){
+      h1 { font-size: 28px; }
+      .info { font-size: 16px; }
     }
   </style>
 </head>
 <body>
-  <h1>📺 Jogos de Hoje - Atualizado diariamente IMPERIAL</h1>
-  {{JOGOS_AQUI}}
+  <div class="overlay">
+    <div class="container">
+      <h1>📺 Jogos de Hoje na TV</h1>
+      {{JOGOS_AQUI}}
+    </div>
+  </div>
 </body>
 </html>
