--- a/template.html
+++ b/template.html
@@ -8,7 +8,7 @@
     body {
       font-family: Arial, sans-serif;
       color: #fff;
-      background-image: url('https://campo-4k.png'); /* imagem de fundo */
+      background-image: url('https://files.fm/f/nxf2zrre45'); /* imagem de fundo */
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
