--- a/template.html
+++ b/template.html
@@ -13,7 +13,7 @@
     body {
       font-family: Arial, sans-serif;
       color: #fff;
-      background: #111 url('https://gilson2019.github.io/jogos-tv-hoje/campo-4k.png') no-repeat center center fixed;
+      background-image: url('https://gilson2019.github.io/jogos-tv-hoje/campo-4k.png');
       background-size: cover;
     }
 
