--- a/template.html
+++ b/template.html
@@ -9,16 +9,17 @@
       margin: 0;
       padding: 0;
     }
-
     body {
       font-family: Arial, sans-serif;
       color: #fff;
-      background-image: url('https://gilson2019.github.io/jogos-tv-hoje/campo-4k.png');
+      background-image: url('https://images.unsplash.com/photo-1603565815320-0ba5bfb4f4ac?auto=format&fit=crop&w=1920&q=80');
       background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
     }
 
     .overlay {
-      background-color: rgba(0, 0, 0, 0.85);
+      background-color: rgba(0, 0, 0, 0.75);
       padding: 40px 20px;
       min-height: 100vh;
     }
@@ -33,7 +34,7 @@
       color: #FFD700;
       font-size: 36px;
       margin-bottom: 40px;
-      text-shadow: 2px 2px 6px #000;
+      text-shadow: 2px 2px 4px #000;
     }
 
     .game {
@@ -41,14 +42,8 @@
       border-left: 5px solid #FFD700;
       padding: 15px 20px;
       margin-bottom: 16px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    .game:hover {
-      transform: scale(1.02);
-      box-shadow: 0 0 16px rgba(255, 215, 0, 0.5);
+      border-radius: 8px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.4);
     }
 
     .info {
@@ -62,13 +57,9 @@
       font-size: 15px;
     }
 
-    @media(max-width:600px) {
-      h1 {
-        font-size: 28px;
-      }
-      .info {
-        font-size: 16px;
-      }
+    @media(max-width:600px){
+      h1 { font-size: 28px; }
+      .info { font-size: 16px; }
     }
   </style>
 </head>
