--- a/template.html
+++ b/template.html
@@ -19,10 +19,11 @@
     }
 
     .overlay {
-      background-color: rgba(0, 0, 0, 0.75);
-      padding: 40px 20px;
-      min-height: 100vh;
-    }
+  background-color: rgba(0, 0, 0, 0.4); /* opacidade menor = imagem mais visível */
+  padding: 40px 20px;
+  min-height: 100vh;
+}
+
 
     .container {
       max-width: 1000px;
