--- a/template.html
+++ b/template.html
@@ -4,26 +4,21 @@
   <meta charset="UTF-8">
   <title>Jogos na TV Hoje</title>
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+    * { box-sizing: border-box; margin: 0; padding: 0 }
     body {
       font-family: Arial, sans-serif;
       color: #fff;
-      background-image: url('https://images.unsplash.com/photo-1603565815320-0ba5bfb4f4ac?auto=format&fit=crop&w=1920&q=80');
+      background-image: url('https://i.imgur.com/HEz0Bvt.jpg'); /* imagem de fundo */
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
     }
 
     .overlay {
-  background-color: rgba(0, 0, 0, 0.4); /* opacidade menor = imagem mais visível */
-  padding: 40px 20px;
-  min-height: 100vh;
-}
-
+      background-color: rgba(0, 0, 0, 0.75);
+      padding: 40px 20px;
+      min-height: 100vh;
+    }
 
     .container {
       max-width: 1000px;
