--- a/template.html
+++ b/template.html
@@ -8,7 +8,7 @@
     body {
       font-family: Arial, sans-serif;
       color: #fff;
-      background-image: url('https://i.imgur.com/HEz0Bvt.jpg'); /* imagem de fundo */
+      background-image: url('https://files.fm/u/2pa5zkbyb4'); /* imagem de fundo */
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
