--- a/template.html
+++ b/template.html
@@ -8,16 +8,17 @@
     body {
       font-family: Arial, sans-serif;
       color: #fff;
-      background-image: url('https://files.fm/u/2pa5zkbyb4'); /* imagem de fundo */
+      background-image: url('https://i.imgur.com/eQ2OVUF.png'); /* imagem de fundo corrigida */
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
     }
 
     .overlay {
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
+      background-color: rgba(0, 0, 0, 0.4);
+      min-height: 100vh;
+      padding: 40px 20px;
+    }
 
     .container {
       max-width: 1000px;
