--- a/template.html
+++ b/template.html
@@ -8,7 +8,7 @@
     body {
       font-family: Arial, sans-serif;
       color: #fff;
-      background-image: url('https://i.imgur.com/eQ2OVUF.png'); /* imagem de fundo corrigida */
+      background-image: url('https://i.imgur.com/eQ2OVUF.png');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -29,8 +29,33 @@
       text-align: center;
       color: #FFD700;
       font-size: 36px;
-      margin-bottom: 40px;
+      margin-bottom: 30px;
       text-shadow: 2px 2px 4px #000;
+    }
+
+    /* Filtros */
+    .filters {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    select {
+      background-color: #222;
+      color: #FFD700;
+      border: 2px solid #FFD700;
+      padding: 10px 14px;
+      border-radius: 8px;
+      margin: 10px 8px;
+      font-size: 16px;
+      cursor: pointer;
+      box-shadow: 0 4px 10px rgba(255, 215, 0, 0.2);
+      transition: 0.3s ease;
+    }
+
+    select:hover {
+      background-color: #333;
+      box-shadow: 0 6px 14px rgba(255, 215, 0, 0.4);
+      transform: scale(1.03);
     }
 
     .game {
@@ -63,6 +88,16 @@
   <div class="overlay">
     <div class="container">
       <h1>📺 Jogos de Hoje na TV</h1>
+
+      <div class="filters">
+        <select id="filtro-campeonato">
+          <option value="todos">Todos os Campeonatos</option>
+        </select>
+        <select id="filtro-canal">
+          <option value="todos">Todos os Canais</option>
+        </select>
+      </div>
+
       {{JOGOS_AQUI}}
     </div>
   </div>
