--- a/template.html
+++ b/template.html
@@ -33,7 +33,6 @@
       text-shadow: 2px 2px 4px #000;
     }
 
-    /* Filtros */
     .filters {
       text-align: center;
       margin-bottom: 30px;
@@ -92,9 +91,44 @@
       <div class="filters">
         <select id="filtro-campeonato">
           <option value="todos">Todos os Campeonatos</option>
+          <option value="Brasileirão">Brasileirão</option>
+          <option value="Brasileirão Série B">Brasileirão Série B</option>
+          <option value="Brasileirão Série C">Brasileirão Série C</option>
+          <option value="Brasileirão Feminino">Brasileirão Feminino</option>
+          <option value="Premier League">Premier League</option>
+          <option value="La Liga">La Liga</option>
+          <option value="La Liga 2">La Liga 2</option>
+          <option value="Serie A">Serie A</option>
+          <option value="Bundesliga">Bundesliga</option>
+          <option value="2.Bundesliga">2.Bundesliga</option>
+          <option value="Ligue 1">Ligue 1</option>
+          <option value="Liga Portugal">Liga Portugal</option>
+          <option value="Ekstraklasa">Ekstraklasa</option>
+          <option value="Copa do Mundo Areia">Copa do Mundo de Areia</option>
+          <option value="Jupiler Pro League">Jupiler Pro League</option>
+          <option value="Süperlig">Süperlig</option>
+          <option value="NWSL">NWSL</option>
+          <option value="Liga Futsal">Liga Futsal</option>
+          <option value="Campeonato Argentino">Campeonato Argentino</option>
         </select>
+
         <select id="filtro-canal">
           <option value="todos">Todos os Canais</option>
+          <option value="Globo">Globo</option>
+          <option value="Sportv">Sportv</option>
+          <option value="Premiere">Premiere</option>
+          <option value="ESPN">ESPN</option>
+          <option value="ESPN 2">ESPN 2</option>
+          <option value="ESPN 4">ESPN 4</option>
+          <option value="Disney+">Disney+</option>
+          <option value="Star+">Star+</option>
+          <option value="Amazon Prime Video">Amazon Prime Video</option>
+          <option value="RedeTV">RedeTV</option>
+          <option value="Youtube">YouTube (CazéTV, GoatBR, CBFSTV...)</option>
+          <option value="Nosso Futebol">Nosso Futebol</option>
+          <option value="DAZN">DAZN</option>
+          <option value="TV Brasil">TV Brasil</option>
+          <option value="CBFSTV">CBFSTV</option>
         </select>
       </div>
 
