--- a/template.html
+++ b/template.html
@@ -33,7 +33,6 @@
       text-shadow: 2px 2px 4px #000;
     }
 
-    /* Filtros */
     .filters {
       text-align: center;
       margin-bottom: 30px;
@@ -82,6 +81,12 @@
       h1 { font-size: 28px; }
       .info { font-size: 16px; }
     }
+
+    h2 {
+      color: #FFD700;
+      margin-top: 30px;
+      font-size: 24px;
+    }
   </style>
 </head>
 <body>
@@ -90,16 +95,56 @@
       <h1>📺 Jogos de Hoje na TV</h1>
 
       <div class="filters">
-        <select id="filtro-campeonato">
-          <option value="todos">Todos os Campeonatos</option>
-        </select>
-        <select id="filtro-canal">
+        <select id="filtro-canal" onchange="filtrarJogos()">
           <option value="todos">Todos os Canais</option>
+          <option value="OneFootball">OneFootball</option>
+          <option value="ESPN">ESPN</option>
+          <option value="Disney+">Disney+</option>
+          <option value="Youtube">YouTube</option>
         </select>
       </div>
 
-      {{JOGOS_AQUI}}
+      <!-- JOGOS ORGANIZADOS POR CAMPEONATO -->
+      <div id="jogos">
+
+        <h2>2.Bundesliga</h2>
+        <div class="game" data-canal="OneFootball"><div class="info">08h00 – Fortuna Düsseldorf x Schalke 04</div><div class="canal">Canal: OneFootball</div></div>
+        <div class="game" data-canal="OneFootball"><div class="info">08h00 – Paderborn x Magdeburg</div><div class="canal">Canal: OneFootball</div></div>
+        <div class="game" data-canal="OneFootball"><div class="info">08h00 – Elversberg x Eintracht Braunschweig</div><div class="canal">Canal: OneFootball</div></div>
+
+        <h2>Inglês Feminino</h2>
+        <div class="game" data-canal="ESPN e Disney+"><div class="info">08h30 – Chelsea x Liverpool</div><div class="canal">Canal: ESPN e Disney+</div></div>
+        <div class="game" data-canal="Disney+"><div class="info">08h30 – Arsenal x Manchester United</div><div class="canal">Canal: Disney+</div></div>
+
+        <h2>EFL League One</h2>
+        <div class="game" data-canal="Disney+"><div class="info">08h30 – Leyton Orient x Stockport County</div><div class="canal">Canal: Disney+</div></div>
+
+        <h2>La Liga</h2>
+        <div class="game" data-canal="ESPN 2 e Disney+"><div class="info">09h00 – Valencia x Getafe</div><div class="canal">Canal: ESPN 2 e Disney+</div></div>
+
+        <h2>Ekstraklasa</h2>
+        <div class="game" data-canal="OneFootball"><div class="info">09h45 – Radomiak Radom x Pogon Szczecin</div><div class="canal">Canal: OneFootball</div></div>
+
+        <h2>Serie A</h2>
+        <div class="game" data-canal="Disney+"><div class="info">10h00 – Como 1907 x Cagliari</div><div class="canal">Canal: Disney+</div></div>
+
+        <h2>Bundesliga</h2>
+        <div class="game" data-canal="Youtube.com/@CazeTV e OneFootball"><div class="info">10h30 – Werder Bremen x RB Leipzig</div><div class="canal">Canal: Youtube.com/@CazeTV e OneFootball</div></div>
+      </div>
     </div>
   </div>
+
+  <script>
+    function filtrarJogos() {
+      const canal = document.getElementById("filtro-canal").value.toLowerCase();
+      const jogos = document.querySelectorAll(".game");
+
+      jogos.forEach(jogo => {
+        const canalDoJogo = jogo.getAttribute("data-canal").toLowerCase();
+        const mostrar = canal === "todos" || canalDoJogo.includes(canal);
+        jogo.style.display = mostrar ? "block" : "none";
+      });
+    }
+  </script>
 </body>
 </html>
