--- a/template.html
+++ b/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Jogos na TV Hoje</title>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0 }
@@ -33,31 +33,6 @@
       text-shadow: 2px 2px 4px #000;
     }
 
-    /* Filtros */
-    .filters {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-
-    select {
-      background-color: #222;
-      color: #FFD700;
-      border: 2px solid #FFD700;
-      padding: 10px 14px;
-      border-radius: 8px;
-      margin: 10px 8px;
-      font-size: 16px;
-      cursor: pointer;
-      box-shadow: 0 4px 10px rgba(255, 215, 0, 0.2);
-      transition: 0.3s ease;
-    }
-
-    select:hover {
-      background-color: #333;
-      box-shadow: 0 6px 14px rgba(255, 215, 0, 0.4);
-      transform: scale(1.03);
-    }
-
     .game {
       background-color: rgba(20, 20, 20, 0.85);
       border-left: 5px solid #FFD700;
@@ -65,11 +40,20 @@
       margin-bottom: 16px;
       border-radius: 8px;
       box-shadow: 0 0 8px rgba(0,0,0,0.4);
+      display: flex;
+      align-items: center;
+      gap: 16px;
+    }
+
+    .team-logo {
+      width: 40px;
+      height: 40px;
+      object-fit: contain;
     }
 
     .info {
       font-size: 18px;
-      margin-bottom: 6px;
+      flex: 1;
     }
 
     .canal {
@@ -89,17 +73,19 @@
     <div class="container">
       <h1>📺 Jogos de Hoje na TV</h1>
 
-      <div class="filters">
-        <select id="filtro-campeonato">
-          <option value="todos">Todos os Campeonatos</option>
-        </select>
-        <select id="filtro-canal">
-          <option value="todos">Todos os Canais</option>
-        </select>
+      <!-- Aqui vão os jogos gerados com escudos -->
+      <!-- Exemplo de bloco de jogo abaixo -->
+
+      <div class="game">
+        <img class="team-logo" src="https://media.api-sports.io/football/teams/131.png" alt="Corinthians">
+        <div class="info">16h00 – Corinthians x Palmeiras – Brasileirão</div>
+        <img class="team-logo" src="https://media.api-sports.io/football/teams/134.png" alt="Palmeiras">
+        <div class="canal">Canal: Premiere</div>
       </div>
 
       {{JOGOS_AQUI}}
+
     </div>
   </div>
 </body>
-</html> arrume aqui
+</html>
