--- a/template.html
+++ b/template.html
@@ -43,6 +43,7 @@
       display: flex;
       align-items: center;
       gap: 16px;
+      flex-wrap: wrap;
     }
 
     .team-logo {
@@ -54,17 +55,20 @@
     .info {
       font-size: 18px;
       flex: 1;
+      min-width: 220px;
     }
 
     .canal {
       color: #7CFC00;
       font-weight: bold;
       font-size: 15px;
+      min-width: 120px;
     }
 
     @media(max-width:600px){
       h1 { font-size: 28px; }
       .info { font-size: 16px; }
+      .game { flex-direction: column; align-items: flex-start; }
     }
   </style>
 </head>
@@ -73,9 +77,7 @@
     <div class="container">
       <h1>📺 Jogos de Hoje na TV</h1>
 
-      <!-- Aqui vão os jogos gerados com escudos -->
-      <!-- Exemplo de bloco de jogo abaixo -->
-
+      <!-- Exemplo de jogo -->
       <div class="game">
         <img class="team-logo" src="https://media.api-sports.io/football/teams/131.png" alt="Corinthians">
         <div class="info">16h00 – Corinthians x Palmeiras – Brasileirão</div>
