--- a/template.html
+++ b/template.html
@@ -4,71 +4,83 @@
   <meta charset="UTF-8" />
   <title>Jogos na TV Hoje</title>
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0 }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-image: url('https://i.imgur.com/eQ2OVUF.png');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
+      color: #fff;
     }
 
     .overlay {
-      background-color: rgba(0, 0, 0, 0.4);
+      background: rgba(0, 0, 0, 0.55);
       min-height: 100vh;
       padding: 40px 20px;
+      backdrop-filter: blur(5px);
     }
 
     .container {
-      max-width: 1000px;
+      max-width: 1100px;
       margin: 0 auto;
     }
 
     h1 {
       text-align: center;
+      font-size: 42px;
       color: #FFD700;
-      font-size: 36px;
-      margin-bottom: 30px;
-      text-shadow: 2px 2px 4px #000;
+      margin-bottom: 40px;
+      text-shadow: 1px 1px 3px #000;
     }
 
     .game {
-      background-color: rgba(20, 20, 20, 0.85);
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.1);
       border-left: 5px solid #FFD700;
-      padding: 15px 20px;
-      margin-bottom: 16px;
-      border-radius: 8px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.4);
+      border-radius: 12px;
+      margin-bottom: 20px;
+      padding: 20px;
       display: flex;
       align-items: center;
-      gap: 16px;
-      flex-wrap: wrap;
-    }
-
-    .team-logo {
-      width: 40px;
-      height: 40px;
-      object-fit: contain;
+      gap: 20px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
     }
 
     .info {
-      font-size: 18px;
       flex: 1;
-      min-width: 220px;
+      font-size: 18px;
     }
 
     .canal {
+      font-size: 15px;
       color: #7CFC00;
       font-weight: bold;
-      font-size: 15px;
-      min-width: 120px;
+      white-space: nowrap;
     }
 
-    @media(max-width:600px){
-      h1 { font-size: 28px; }
-      .info { font-size: 16px; }
-      .game { flex-direction: column; align-items: flex-start; }
+    @media(max-width: 768px) {
+      h1 {
+        font-size: 30px;
+      }
+
+      .game {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .info {
+        font-size: 16px;
+      }
+
+      .canal {
+        font-size: 14px;
+      }
     }
   </style>
 </head>
