--- a/template.html
+++ b/template.html
@@ -23,7 +23,7 @@
       background: rgba(0, 0, 0, 0.55);
       min-height: 100vh;
       padding: 40px 20px;
-      backdrop-filter: blur(5px);
+      backdrop-filter: blur(6px);
     }
 
     .container {
@@ -33,7 +33,7 @@
 
     h1 {
       text-align: center;
-      font-size: 42px;
+      font-size: 40px;
       color: #FFD700;
       margin-bottom: 40px;
       text-shadow: 1px 1px 3px #000;
@@ -41,45 +41,35 @@
 
     .game {
       background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      border-left: 5px solid #FFD700;
-      border-radius: 12px;
-      margin-bottom: 20px;
-      padding: 20px;
-      display: flex;
-      align-items: center;
-      gap: 20px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+      border-left: 4px solid #FFD700;
+      border-radius: 10px;
+      padding: 16px 20px;
+      margin-bottom: 18px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     }
 
     .info {
-      flex: 1;
-      font-size: 18px;
+      font-size: 17px;
+      margin-bottom: 6px;
     }
 
     .canal {
-      font-size: 15px;
+      font-size: 14px;
       color: #7CFC00;
-      font-weight: bold;
-      white-space: nowrap;
+      font-weight: 500;
     }
 
-    @media(max-width: 768px) {
+    @media (max-width: 768px) {
       h1 {
-        font-size: 30px;
-      }
-
-      .game {
-        flex-direction: column;
-        align-items: flex-start;
+        font-size: 28px;
       }
 
       .info {
-        font-size: 16px;
+        font-size: 15px;
       }
 
       .canal {
-        font-size: 14px;
+        font-size: 13px;
       }
     }
   </style>
