--- a/template.html
+++ b/template.html
@@ -20,10 +20,10 @@
     }
 
     .overlay {
-      background: rgba(0, 0, 0, 0.55);
+      background: rgba(0, 0, 0, 0.25); /* Menor opacidade */
       min-height: 100vh;
       padding: 40px 20px;
-      backdrop-filter: blur(6px);
+      /* blur removido para deixar a imagem mais visível */
     }
 
     .container {
